<resources>
    <string name="app_name">Minha Opinião</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha inválida</string>
    <string name="error_field_required">Favor digitar o e-mail</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cadastro">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">E-Mail</string>
    <string name="cep">CEP</string>
    <string name="foto">Foto</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceuSenha">Esqueci minha senha</string>
    <string name="facebook">LOGIN COM FACEBOOK</string>
    <string name="ou">OU</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="nascimento">Nascimento</string>
    <string name="conf_senha">Confirmar Senha</string>
    <string name="enviar">Enviar</string>
    <string name="question_pwd">Esqueceu sua senha?</string>
    <string name="msg_recup_senha">Minha Opinião gostaria de enviar as instruções de resete de senha para o endereço de e-mail associado a sua conta de usuário.</string>
    <string name="atendimento">Atendimento</string>
    <string name="conforto">Conforto</string>
    <string name="qualidade">Qualidade</string>
    <string name="custo">Custo</string>
    <string name="retornaria">Retornaria</string>
    <string name="indicar_amigo">Indicaria a um amigo</string>
    <string name="enviar_avaliacao">Enviar avaliação :)</string>
    <string name="area_comercial">Área Comercial</string>
    <string name="localizacao">Localização</string>
    <string name="logged_sucess">LOGADO COM SUCESSO!</string>
    <string name="DB_NAME">MinhaOpiniao.db</string>
    
    <string name="minha_conta">Minha Conta</string>
    <string name="add_estabelecimento">Adicionar Estabelecimento</string>
    <string name="meus_favoritos">Meus Favoritos</string>
    <string name="fale_conosco">Fale Conosco</string>
    <string name="sair">Sair</string>
    <string name="sobre_app">Sobre o Aplicativo</string>
    <string name="duvida_freq">Dúvidas Frequentes</string>
    <string name="curta_facebook">Curta no Facebook</string>
    <string name="avalie_google">Avalie na Google Play</string>
    <string name="termos_uso">Termos de Uso</string>

    <string-array name="atributos_avaliacao">
        <item>Ótimo</item>
        <item>Bom</item>
        <item>Moderado</item>
        <item>Ruim</item>
        <item>Muito Ruim</item>
    </string-array>

    <string-array name="questao_objetiva">
        <item>Sim</item>
        <item>Não</item>
    </string-array>

    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="inserir">Inserir</string>
    <string name="gps">GPS</string>
    <string name="locInserir">Localização baseada nos dados abaixo.</string>
    <string name="locGPS">Localização baseada no GPS.</string>
    <string name="enviar_foto">Enviar foto</string>
    <string name="local">Local</string>
    <string name="inf_estabelecimento">Receber informações do estabelecimento.</string>
    <string name="busca_local">Pesquisar local</string>

    <string name="cliente">Cliente</string>
    <string name="funcionario">Funcionário</string>
    <string name="proprietario">Proprietário</string>

    <string name="avaliar">Avaliar</string>
    <string name="info">Informações</string>
    <string name="comentarios">Comentários</string>
    <string name="recomendados">Recomendados</string>
    <string name="proximos">Próximos</string>
    <string name="novidades">Novidades</string>
    <string name="favoritos">Favoritos</string>
    <string name="usuario_cadastrado">Usuário cadastrado com sucesso!</string>
    <string name="senhas_diferentes">As senhas informadas são diferentes!</string>
    <string name="recup_senha">E-mail enviado com sucesso!</string>
    <string name="email_invalido">Informe um e-mail válido!</string>
    <string name="senha_pequena">Informe uma senha com tamanho maior que 4.</string>
    <string name="imagem_armazenada">Imagem armazenada com sucesso!</string>
    <string name="select_local_img">Encontrar a imagem em</string>
    <string name="GPSAlertDialogTitle">GPS</string>
    <string name="GPSAlertDialogMessage">Configurar GPS</string>
    <string name="action_settings">Ok</string>
    <string name="cancel">Cancelar</string>

    <string-array name="colors">
        <item>#FFF</item>
        <item>#000</item>
        <item>#F00</item>
    </string-array>

    <string-array name="list_estados">
        <item>Acre - AC </item>
        <item>Alagoas - AL </item>
        <item>Amapá - AP </item>
        <item>Amazonas - AM </item>
        <item>Bahia - BA </item>
        <item>Ceará - CE </item>
        <item>Distrito Federal - DF </item>
        <item>Espírito Santo - ES </item>
        <item>Goiás - GO </item>
        <item>Maranhão - MA </item>
        <item>Mato Grosso - MT </item>
        <item>Mato Grosso do Sul - MS </item>
        <item>Minas Gerais - MG </item>
        <item>Pará - PA </item>
        <item>Paraíba - PB </item>
        <item>Paraná - PR </item>
        <item>Pernambuco - PE </item>
        <item>Piauí - PI </item>
        <item>Rio de Janeiro - RJ </item>
        <item>Rio Grande do Norte - RN </item>
        <item>Rio Grande do Sul - RS </item>
        <item>Rondônia - RO </item>
        <item>Roraima - RR </item>
        <item>Santa Catarina - SC </item>
        <item>São Paulo - SP </item>
        <item>Sergipe - SE </item>
        <item>Tocantins - TO </item>
    </string-array>

    <string-array name="questao_custo">
        <item>Atraente</item>
        <item>Moderado</item>
        <item>Elevado</item>
    </string-array>

    <string-array name="list_areas">
        <item>Lanchonete</item>
        <item>Restaurante</item>
        <item>Loja</item>
        <item>Serviço</item>
        <item>Entretenimento</item>
        <item>Outras</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    
    <string name="preference_logged">com.cursoandroid.myopinion.logged</string>
    <string name="saved_logged">logado</string>
    <string name="user_id">id do usuario</string>
    <string name="ultimo_acesso">Ultimo acesso</string>

    <string name="facebook_app_id">333231187053263</string>

</resources>
