

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cursoandroid.myopinion.CadastroActivity"
    android:background="@color/colorPrimaryDark">

    <ImageButton
        android:id="@+id/back_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_gravity="left"
        android:background="@null"
        android:layout_marginBottom="5dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_adduser"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:textSize="20dp"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_user"
            android:background="@drawable/edittextstyle"/>

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:background="@drawable/edittextstyle"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/cep"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/cep"
            android:inputType="number"
            android:maxLines="1"
            android:theme="@style/EditTextTheme"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_location"
            android:background="@drawable/edittextstyle"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/nascimento"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/nascimento"
            android:inputType="number"
            android:maxLines="1"
            android:theme="@style/EditTextTheme"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_date"
            android:background="@drawable/edittextstyle"
            android:textSize="20dp" />


    <EditText
        android:id="@+id/senha"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:maxLines="1"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/ic_lock_black_24dp"/>

    <EditText
        android:id="@+id/conf_senha"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/conf_senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20dp"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edittextstyle"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        style="?android:textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_blue"/>


    </LinearLayout>
    </ScrollView>
</LinearLayout>

