<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_recuperar_senha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cursoandroid.myopinion.RecuperarSenhaActivity"
    android:background="@color/colorPrimaryDark">
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
    <ImageButton
        android:id="@+id/back_recup_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_gravity="left"
        android:background="@null"
        android:layout_marginBottom="5dp"
        />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="25dp"
        android:text="@string/question_pwd"
        android:drawableLeft="@drawable/ic_forgot_pwd"
        android:drawablePadding="5dp"/>
    <!--</LinearLayout>-->
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_recup_senha"
        android:lines="4"
        />


    <EditText
        android:id="@+id/etEmail_recup_senha"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:background="@drawable/edittextstyle"
        android:textSize="20dp" />


    <Button
        android:id="@+id/btEnviar_recup_senha"
        android:layout_marginTop="15dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        android:background="@drawable/button_blue"/>

</LinearLayout>
